--- a/ui/sharpness_analyzer.ui
+++ b/ui/sharpness_analyzer.ui
@@ -45,6 +45,12 @@
           <height>30</height>
          </size>
         </property>
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
         <property name="text">
          <string>Back</string>
         </property>
@@ -60,7 +66,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Changing Colorspaces</string>
+         <string>HSV Filter</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -77,12 +83,21 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
+      <property name="lineWidth">
+       <number>5</number>
+      </property>
       <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="1,1,1,3,1,1">
        <property name="spacing">
         <number>20</number>
        </property>
        <item>
         <widget class="QLabel" name="label_11">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="text">
           <string>Choose type</string>
          </property>
@@ -95,6 +110,12 @@
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
           <widget class="QRadioButton" name="radioButtonVideo">
+           <property name="font">
+            <font>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>Video</string>
            </property>
@@ -105,6 +126,12 @@
          </item>
          <item>
           <widget class="QRadioButton" name="radioButtonImage">
+           <property name="font">
+            <font>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>Image</string>
            </property>
@@ -112,6 +139,12 @@
          </item>
          <item>
           <widget class="QRadioButton" name="radioButtonWebcam">
+           <property name="font">
+            <font>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>Webcam</string>
            </property>
@@ -124,6 +157,12 @@
        </item>
        <item>
         <widget class="QLabel" name="label_12">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="text">
           <string>Choose file</string>
          </property>
@@ -150,6 +189,12 @@
            <height>30</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="text">
           <string>Choose</string>
          </property>
@@ -162,6 +207,12 @@
            <width>16777215</width>
            <height>30</height>
           </size>
+         </property>
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
          </property>
          <property name="text">
           <string>Apply</string>
@@ -205,7 +256,10 @@
            <enum>QFrame::Box</enum>
           </property>
           <property name="frameShadow">
-           <enum>QFrame::Plain</enum>
+           <enum>QFrame::Sunken</enum>
+          </property>
+          <property name="lineWidth">
+           <number>5</number>
           </property>
           <property name="text">
            <string>TextLabel</string>
@@ -222,6 +276,12 @@
          <layout class="QGridLayout" name="gridLayoutType">
           <item row="1" column="1">
            <widget class="QProgressBar" name="progressBarSobel">
+            <property name="font">
+             <font>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
             <property name="value">
              <number>0</number>
             </property>
@@ -229,6 +289,12 @@
           </item>
           <item row="0" column="0">
            <widget class="QCheckBox" name="checkBoxLaplacian">
+            <property name="font">
+             <font>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
             <property name="layoutDirection">
              <enum>Qt::RightToLeft</enum>
             </property>
@@ -239,6 +305,12 @@
           </item>
           <item row="0" column="1">
            <widget class="QProgressBar" name="progressBarLaplacian">
+            <property name="font">
+             <font>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
             <property name="value">
              <number>0</number>
             </property>
@@ -249,6 +321,12 @@
           </item>
           <item row="1" column="0">
            <widget class="QCheckBox" name="checkBoxSobel">
+            <property name="font">
+             <font>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
             <property name="layoutDirection">
              <enum>Qt::RightToLeft</enum>
             </property>
